# ytm

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUG_AND_FIX_SUMMARY.md  FFMPEG_MULTIPLE_SONGS_FIX.md  HYBRID_PLAYER.md  LICENSE  LLM_RECOMMENDATIONS.md  Makefile  PYGAME_FALLBACK_TESTING.md  PYGAME_SKIP_FIX.md  PYGAME_TESTING_SUMMARY.txt  QUICKSTART_TUI.md  README.md  RELEASING.md  TESTING.md  TEST_PLAN.md  TROUBLESHOOTING.md  TUI_GUIDE.md  TUI_STATUS.md  TUI_SUMMARY.md  VERBOSE_LOGGING.md  azure-pipelines-review.yml  config.ini  config.ini.example  migrate_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  setup.ps1  setup.sh  setup_alias.bat  setup_alias.ps1  setup_alias.sh  test_ffmpeg_cli_simple.py  (+6 more)
.github/: dependabot.yml
.github/workflows/: claude-review.yml  lint.yml  publish.yml  pylint.yml  screenshots.yml  test.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  linting_formatting_testing.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  timestamped_lyrics_feature.md
planning/: README.md
planning/architecture/: system-design.md
planning/docs/: project-overview.md
planning/features/: cool-features.md  recommendations.md
planning/phase2/: roadmap.md
screenshots/: .gitignore  lyrics.tape  lyrics.webm  player.tape  player.webm
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_config.py  test_dislikes.py  test_ffmpeg_player.py  test_hybrid_player.py  test_integration.py  test_lyrics_service.py  test_main.py  test_playlists.py  test_runner.py  test_spectrum.py  test_ui.py  test_utils.py
ytm_cli/: __init__.py  __main__.py  auth.py  cache.py  config.py  demo.py  dislikes.py  ffmpeg_player.py  hybrid_player.py  llm_client.py  lyrics_service.py  main.py  player.py  playlists.py  spectrum.py  ui.py  utils.py  verbose_logger.py
ytm_cli/tui/: __init__.py  app.py  ffmpeg_player.py  player_factory.py  player_service.py  pygame_player.py  styles.tcss
ytm_cli/tui/widgets/: __init__.py  now_playing.py  playlist_sidebar.py  queue.py  search.py
