[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytm-cli"
version = "0.7.1"
description = "YouTube Music CLI tool with interactive terminal interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "thieuluan", email = "thieuluan.dark@gmail.com" },
]
keywords = ["youtube-music", "cli", "terminal", "music-player", "mpv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "ytmusicapi",
    "rich",
    "mpv",
    "requests",
    "pyperclip",
    "numpy",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.0",
    "coverage>=7.0.0",
    "yt-dlp>=2024.0.0",
]

[project.urls]
Homepage = "https://github.com/thieuluan1618/ytm"
Repository = "https://github.com/thieuluan1618/ytm"
Issues = "https://github.com/thieuluan1618/ytm/issues"

[project.scripts]
ytm-cli = "ytm_cli.main:main"

[tool.setuptools.packages.find]
include = ["ytm_cli*"]

[tool.ruff]
# Set line length to match pylint (100 characters)
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Enable flake8 rules and other important checks
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules that conflict with project style
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use 4 spaces for indentation
indent-style = "space"
# Keep existing line endings
line-ending = "auto"

[tool.ruff.lint.isort]
# Group imports properly
known-first-party = ["ytm_cli"]
